--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
 	<h1>Adam's A Fag</h1>
 	<p>This is the default web page for John's Raspberry Pi.</p>
+	<p> New Paragraph </p>
 </body>
 </html>
