--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 			var key_pressed = event.which;
 
 			if (key_pressed == 37) {
-				document.getElementById("left_arrow_img").src = "img\\left_press.jpg";
+				document.getElementById("left_arrow_img").src = "img/left_press.jpg";
 			}
 			else if (key_pressed == 38) {
-				document.getElementById("up_arrow_img").src = "img\\up_press.jpg";
+				document.getElementById("up_arrow_img").src = "img/up_press.jpg";
 			}
 			else if (key_pressed == 39) {
-				document.getElementById("right_arrow_img").src = "img\\right_press.jpg";
+				document.getElementById("right_arrow_img").src = "img/right_press.jpg";
 			}
 			else if (key_pressed == 40) {
-				document.getElementById("down_arrow_img").src = "img\\down_press.jpg";
+				document.getElementById("down_arrow_img").src = "img/down_press.jpg";
 			}
 
 		}
@@ -25,16 +25,16 @@
 			var key_pressed = event.which;
 			
 			if (key_pressed == 37) {
-				document.getElementById("left_arrow_img").src = "img\\left.jpg";
+				document.getElementById("left_arrow_img").src = "img/left.jpg";
 			}
 			else if (key_pressed == 38) {
-				document.getElementById("up_arrow_img").src = "img\\up.jpg";
+				document.getElementById("up_arrow_img").src = "img/up.jpg";
 			}
 			else if (key_pressed == 39) {
-				document.getElementById("right_arrow_img").src = "img\\right.jpg";
+				document.getElementById("right_arrow_img").src = "img/right.jpg";
 			}
 			else if (key_pressed == 40) {
-				document.getElementById("down_arrow_img").src = "img\\down.jpg";
+				document.getElementById("down_arrow_img").src = "img/down.jpg";
 			}
 
 		}
@@ -44,11 +44,11 @@
 </head>
 <body onkeydown="processKeyDown(event)" onkeyup="processKeyUp(event)">
 		
-	<img id="up_arrow_img" src="img\up.jpg" />
+	<img id="up_arrow_img" src="img/up.jpg" />
 	<p></p>
-	<img id="left_arrow_img" src="img\left.jpg" />
-	<img id="down_arrow_img" src="img\down.jpg" />
-	<img id="right_arrow_img" src="img\right.jpg" />
+	<img id="left_arrow_img" src="img/left.jpg" />
+	<img id="down_arrow_img" src="img/down.jpg" />
+	<img id="right_arrow_img" src="img/right.jpg" />
 
 </body>
 </html>
