cleanup, file seperation

--- a/index.html
+++ b/index.html
@@ -1,53 +1,9 @@
 <html> 
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script>
-		function processKeyDown(event) {
-			var key_pressed = event.which;
-
-			if (key_pressed == 37) {
-				document.getElementById("left_arrow_img").src = "img/left_press.jpg";
-				$(document).load("cgi-bin/pin7on.cgi");
-			}
-			else if (key_pressed == 38) {
-				document.getElementById("up_arrow_img").src = "img/up_press.jpg";
-				$(document).load("cgi-bin/pin4on.cgi");
-			}
-			else if (key_pressed == 39) {
-				document.getElementById("right_arrow_img").src = "img/right_press.jpg";
-				$(document).load("cgi-bin/pin2on.cgi");
-			}
-			else if (key_pressed == 40) {
-				document.getElementById("down_arrow_img").src = "img/down_press.jpg";
-				$(document).load("cgi-bin/pin3on.cgi");
-			}
-
-
-		}
-		
-		function processKeyUp(event) {
-			var key_pressed = event.which;
-			
-			if (key_pressed == 37) {
-				document.getElementById("left_arrow_img").src = "img/left.jpg";
-				$(document).load("cgi-bin/pin7off.cgi");
-			}
-			else if (key_pressed == 38) {
-				document.getElementById("up_arrow_img").src = "img/up.jpg";
-				$(document).load("cgi-bin/pin4off.cgi");
-			}
-			else if (key_pressed == 39) {
-				document.getElementById("right_arrow_img").src = "img/right.jpg";
-				$(document).load("cgi-bin/pin2off.cgi");
-			}
-			else if (key_pressed == 40) {
-				document.getElementById("down_arrow_img").src = "img/down.jpg";
-				$(document).load("cgi-bin/pin3off.cgi");
-			}
-
-		}
-	</script>
+	<script src="scripts/script.js"></script>
+	
 	<title>John's Raspberry Pi</title>
 	
 </head>
@@ -58,9 +14,6 @@
 	<img id="left_arrow_img" src="img/left.jpg" />
 	<img id="down_arrow_img" src="img/down.jpg" />
 	<img id="right_arrow_img" src="img/right.jpg" />
-	<p></p>
-	<a href="cgi-bin/pin7on.cgi"> 7 ON </a>
-	<a href="cgi-bin/pin7off.cgi"> 7 OFF </a>
 
 </body>
 </html>
