--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html> 
 <!--COMMENT-->
+<!--GITHUB COLLABORATION TESTING-->
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
