--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--COMMENT-->
 <!--GITHUB COLLABORATION TESTING-->
 <!--GITHUB COLLABORATION TESTING 2-->
+<!--GITHUB COLLABORATION TESTING 3-->
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
