--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	
 </head>
 <body onkeydown="processKeyDown(event)" onkeyup="processKeyUp(event)">
-
+<div>
+<img src="http://142.105.218.75:8080/?action=stream"/>
+</div>
 	<img id="up_arrow_img" src="img/up.jpg" />
 	<p></p>
 	<img id="left_arrow_img" src="img/left.jpg" />
